Updating tracker via automation

--- a/tracker.html
+++ b/tracker.html
@@ -6,11 +6,11 @@
 <script src='js/jquery.js'></script>
 <script src='js/script.js'></script>
 <img src="banner.png" alt="PST TIME EVENT">
-<h3 value="utc" onClick="swapTime(event)">as of 2023/05/02 09:44:46 PM UTC</h3>
-<h4>as of 2023/05/02 09:44:46 PM UTC</h3>
+<h3 value="utc" onClick="swapTime(event)">as of 2023/05/02 10:06:42 PM UTC</h3>
+<h4>as of 2023/05/02 10:06:42 PM UTC</h3>
 <div>Times are tracked and claimed automatically.<br>Post in the <a href='https://www.playstationtrophies.org/forum/topic/334336-wait-a-minute-~-discussion/'>discussion thread</a> if you see any discrepancies and for further rules.</div><br>
 <div id="goal-count"><table><thead><tr class='percentageFill'><th>Current</th><th>Remaining</th><th>Progress</th></tr></thead>
-<tbody><tr class='percentageFill'><td>383</td><td>1017</td><td id="goalPercentage">27.36%</td></tr></tbody></table></div><br>
+<tbody><tr class='percentageFill'><td>386</td><td>1014</td><td id="goalPercentage">27.57%</td></tr></tbody></table></div><br>
 <div class="tab"><button class="tablinks active" onclick="openTab(event, 'remaining')">Remaining</button>
 <button class="tablinks" onclick="openTab(event, 'claimed')">Claimed</button>
 <button class="tablinks" onclick="openTab(event, 'leaderboard')">LB</button>
@@ -969,16 +969,13 @@
 <tr><td>21:06</tr></td>
 <tr><td>21:09</tr></td>
 <tr><td>21:10</tr></td>
-<tr><td>21:13</tr></td>
 <tr><td>21:14</tr></td>
 <tr><td>21:15</tr></td>
 <tr><td>21:16</tr></td>
 <tr><td>21:17</tr></td>
 <tr><td>21:18</tr></td>
-<tr><td>21:19</tr></td>
 <tr><td>21:21</tr></td>
 <tr><td>21:23</tr></td>
-<tr><td>21:24</tr></td>
 <tr><td>21:25</tr></td>
 <tr><td>21:26</tr></td>
 <tr><td>21:27</tr></td>
@@ -1415,8 +1412,11 @@
 <tr><td>21:08 </td><td>danc97-         </td><td><a href="https://www.playstationtrophies.org/profiles/danc97-/log?id=31439">31439</a>         </td><td style="text-align: right;">   47.07</td></tr>
 <tr><td>21:11 </td><td>Darth_Krid      </td><td><a href="https://www.playstationtrophies.org/profiles/Darth_Krid/log?id=30354">30354</a>      </td><td style="text-align: right;">   39.85</td></tr>
 <tr><td>21:12 </td><td>Darth_Krid      </td><td><a href="https://www.playstationtrophies.org/profiles/Darth_Krid/log?id=30382">30382</a>      </td><td style="text-align: right;">   40.26</td></tr>
+<tr><td>21:13 </td><td>staytrue1985    </td><td><a href="https://www.playstationtrophies.org/profiles/staytrue1985/log?id=14886">14886</a>    </td><td style="text-align: right;">   50.91</td></tr>
+<tr><td>21:19 </td><td>staytrue1985    </td><td><a href="https://www.playstationtrophies.org/profiles/staytrue1985/log?id=14887">14887</a>    </td><td style="text-align: right;">   50.8 </td></tr>
 <tr><td>21:20 </td><td>Xemik           </td><td><a href="https://www.playstationtrophies.org/profiles/Xemik/log?id=27202">27202</a>           </td><td style="text-align: right;">   31.11</td></tr>
 <tr><td>21:22 </td><td>mattigummi45    </td><td><a href="https://www.playstationtrophies.org/profiles/mattigummi45/log?id=12779">12779</a>    </td><td style="text-align: right;">   39.36</td></tr>
+<tr><td>21:24 </td><td>staytrue1985    </td><td><a href="https://www.playstationtrophies.org/profiles/staytrue1985/log?id=14888">14888</a>    </td><td style="text-align: right;">   44.8 </td></tr>
 <tr><td>21:40 </td><td>mattigummi45    </td><td><a href="https://www.playstationtrophies.org/profiles/mattigummi45/log?id=12780">12780</a>    </td><td style="text-align: right;">   24.85</td></tr>
 <tr><td>21:41 </td><td>Darth_Krid      </td><td><a href="https://www.playstationtrophies.org/profiles/Darth_Krid/log?id=30384">30384</a>      </td><td style="text-align: right;">   38.02</td></tr>
 <tr><td>22:07 </td><td>Road2unner      </td><td><a href="https://www.playstationtrophies.org/profiles/Road2unner/log?id=19124">19124</a>      </td><td style="text-align: right;">    7.84</td></tr>
@@ -1487,9 +1487,9 @@
 <tr><td>Hemming87       </td><td style="text-align: right;">     36</td></tr>
 <tr><td>Darth_Krid      </td><td style="text-align: right;">     33</td></tr>
 <tr><td>Zetberg         </td><td style="text-align: right;">     25</td></tr>
+<tr><td>staytrue1985    </td><td style="text-align: right;">     25</td></tr>
 <tr><td>THE--ALCHEMlST  </td><td style="text-align: right;">     25</td></tr>
 <tr><td>Martz4040       </td><td style="text-align: right;">     24</td></tr>
-<tr><td>staytrue1985    </td><td style="text-align: right;">     22</td></tr>
 <tr><td>Jerry_Appleby   </td><td style="text-align: right;">     16</td></tr>
 <tr><td>mattigummi45    </td><td style="text-align: right;">     16</td></tr>
 <tr><td>Dolken_swe      </td><td style="text-align: right;">     14</td></tr>
@@ -3065,7 +3065,7 @@
 <tr><td>MISSING                                                                                   </td><td>MISSING </td><td style="text-align: right;">       19</td></tr>
 <tr><td>MISSING                                                                                   </td><td>MISSING </td><td style="text-align: right;">       20</td></tr>
 <tr><td>MISSING                                                                                   </td><td>MISSING </td><td style="text-align: right;">       21</td></tr>
-<tr><td>MISSING                                                                                   </td><td>MISSING </td><td style="text-align: right;">       22</td></tr>
+<tr><td><a href="https://www.playstationtrophies.org/profiles/staytrue1985/log?id=14886">14886</a></td><td>50.91   </td><td style="text-align: right;">       22</td></tr>
 <tr><td>MISSING                                                                                   </td><td>MISSING </td><td style="text-align: right;">       23</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/staytrue1985/log?id=14880">14880</a></td><td>39.35   </td><td style="text-align: right;">       24</td></tr>
 <tr><td>MISSING                                                                                   </td><td>MISSING </td><td style="text-align: right;">       25</td></tr>
@@ -3075,7 +3075,7 @@
 <tr><td><a href="https://www.playstationtrophies.org/profiles/staytrue1985/log?id=14867">14867</a></td><td>85.35   </td><td style="text-align: right;">       29</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/staytrue1985/log?id=14873">14873</a></td><td>80.56   </td><td style="text-align: right;">       30</td></tr>
 <tr><td>MISSING                                                                                   </td><td>MISSING </td><td style="text-align: right;">       31</td></tr>
-<tr><td>MISSING                                                                                   </td><td>MISSING </td><td style="text-align: right;">       32</td></tr>
+<tr><td><a href="https://www.playstationtrophies.org/profiles/staytrue1985/log?id=14888">14888</a></td><td>44.80   </td><td style="text-align: right;">       32</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/staytrue1985/log?id=14862">14862</a></td><td>43.95   </td><td style="text-align: right;">       33</td></tr>
 <tr><td>MISSING                                                                                   </td><td>MISSING </td><td style="text-align: right;">       34</td></tr>
 <tr><td>MISSING                                                                                   </td><td>MISSING </td><td style="text-align: right;">       35</td></tr>
@@ -3094,7 +3094,7 @@
 <tr><td><a href="https://www.playstationtrophies.org/profiles/staytrue1985/log?id=14863">14863</a></td><td>41.00   </td><td style="text-align: right;">       48</td></tr>
 <tr><td>MISSING                                                                                   </td><td>MISSING </td><td style="text-align: right;">       49</td></tr>
 <tr><td>MISSING                                                                                   </td><td>MISSING </td><td style="text-align: right;">       50</td></tr>
-<tr><td><a href="https://www.playstationtrophies.org/profiles/staytrue1985/log?id=14869">14869</a></td><td>75.49   </td><td style="text-align: right;">       51</td></tr>
+<tr><td><a href="https://www.playstationtrophies.org/profiles/staytrue1985/log?id=14887">14887</a></td><td>50.80   </td><td style="text-align: right;">       51</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/staytrue1985/log?id=14872">14872</a></td><td>80.00   </td><td style="text-align: right;">       52</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/staytrue1985/log?id=14881">14881</a></td><td>35.03   </td><td style="text-align: right;">       53</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/staytrue1985/log?id=14883">14883</a></td><td>24.12   </td><td style="text-align: right;">       54</td></tr>
