Updating tracker via automation

--- a/tracker.html
+++ b/tracker.html
@@ -6,11 +6,11 @@
 <script src='js/jquery.js'></script>
 <script src='js/script.js'></script>
 <img src="banner.png" alt="PST TIME EVENT">
-<h3 value="utc" onClick="swapTime(event)">as of 2023/05/03 12:06:42 AM UTC</h3>
-<h4>as of 2023/05/03 12:06:42 AM UTC</h3>
+<h3 value="utc" onClick="swapTime(event)">as of 2023/05/03 01:06:42 AM UTC</h3>
+<h4>as of 2023/05/03 01:06:42 AM UTC</h3>
 <div>Times are tracked and claimed automatically.<br>Post in the <a href='https://www.playstationtrophies.org/forum/topic/334336-wait-a-minute-~-discussion/'>discussion thread</a> if you see any discrepancies and for further rules.</div><br>
 <div id="goal-count"><table><thead><tr class='percentageFill'><th>Current</th><th>Remaining</th><th>Progress</th></tr></thead>
-<tbody><tr class='percentageFill'><td>397</td><td>1003</td><td id="goalPercentage">28.36%</td></tr></tbody></table></div><br>
+<tbody><tr class='percentageFill'><td>400</td><td>1000</td><td id="goalPercentage">28.57%</td></tr></tbody></table></div><br>
 <div class="tab"><button class="tablinks active" onclick="openTab(event, 'remaining')">Remaining</button>
 <button class="tablinks" onclick="openTab(event, 'claimed')">Claimed</button>
 <button class="tablinks" onclick="openTab(event, 'leaderboard')">LB</button>
@@ -964,7 +964,6 @@
 <tr><td>21:06</tr></td>
 <tr><td>21:09</tr></td>
 <tr><td>21:10</tr></td>
-<tr><td>21:14</tr></td>
 <tr><td>21:15</tr></td>
 <tr><td>21:16</tr></td>
 <tr><td>21:17</tr></td>
@@ -994,7 +993,6 @@
 <tr><td>21:53</tr></td>
 <tr><td>21:54</tr></td>
 <tr><td>21:55</tr></td>
-<tr><td>21:56</tr></td>
 <tr><td>21:57</tr></td>
 <tr><td>21:58</tr></td>
 <tr><td>21:59</tr></td>
@@ -1015,7 +1013,6 @@
 <tr><td>22:17</tr></td>
 <tr><td>22:18</tr></td>
 <tr><td>22:19</tr></td>
-<tr><td>22:20</tr></td>
 <tr><td>22:21</tr></td>
 <tr><td>22:22</tr></td>
 <tr><td>22:23</tr></td>
@@ -1407,6 +1404,7 @@
 <tr><td>21:11 </td><td>Darth_Krid      </td><td><a href="https://www.playstationtrophies.org/profiles/Darth_Krid/log?id=30354">30354</a>      </td><td style="text-align: right;">   39.85</td></tr>
 <tr><td>21:12 </td><td>Darth_Krid      </td><td><a href="https://www.playstationtrophies.org/profiles/Darth_Krid/log?id=30382">30382</a>      </td><td style="text-align: right;">   40.26</td></tr>
 <tr><td>21:13 </td><td>staytrue1985    </td><td><a href="https://www.playstationtrophies.org/profiles/staytrue1985/log?id=14886">14886</a>    </td><td style="text-align: right;">   50.91</td></tr>
+<tr><td>21:14 </td><td>VazzVegas       </td><td><a href="https://www.playstationtrophies.org/profiles/VazzVegas/log?id=9862">9862</a>         </td><td style="text-align: right;">   56.41</td></tr>
 <tr><td>21:19 </td><td>danc97-         </td><td><a href="https://www.playstationtrophies.org/profiles/danc97-/log?id=31440">31440</a>         </td><td style="text-align: right;">   45.55</td></tr>
 <tr><td>21:20 </td><td>Xemik           </td><td><a href="https://www.playstationtrophies.org/profiles/Xemik/log?id=27202">27202</a>           </td><td style="text-align: right;">   31.11</td></tr>
 <tr><td>21:21 </td><td>danc97-         </td><td><a href="https://www.playstationtrophies.org/profiles/danc97-/log?id=31441">31441</a>         </td><td style="text-align: right;">   29.66</td></tr>
@@ -1419,9 +1417,11 @@
 <tr><td>21:41 </td><td>Darth_Krid      </td><td><a href="https://www.playstationtrophies.org/profiles/Darth_Krid/log?id=30384">30384</a>      </td><td style="text-align: right;">   38.02</td></tr>
 <tr><td>21:44 </td><td>danc97-         </td><td><a href="https://www.playstationtrophies.org/profiles/danc97-/log?id=31447">31447</a>         </td><td style="text-align: right;">   16.47</td></tr>
 <tr><td>21:45 </td><td>danc97-         </td><td><a href="https://www.playstationtrophies.org/profiles/danc97-/log?id=31448">31448</a>         </td><td style="text-align: right;">   16   </td></tr>
+<tr><td>21:56 </td><td>VazzVegas       </td><td><a href="https://www.playstationtrophies.org/profiles/VazzVegas/log?id=9863">9863</a>         </td><td style="text-align: right;">   54.86</td></tr>
 <tr><td>22:07 </td><td>Road2unner      </td><td><a href="https://www.playstationtrophies.org/profiles/Road2unner/log?id=19124">19124</a>      </td><td style="text-align: right;">    7.84</td></tr>
 <tr><td>22:11 </td><td>diskdocx        </td><td><a href="https://www.playstationtrophies.org/profiles/diskdocx/log?id=54513">54513</a>        </td><td style="text-align: right;">   78.74</td></tr>
 <tr><td>22:13 </td><td>Darth_Krid      </td><td><a href="https://www.playstationtrophies.org/profiles/Darth_Krid/log?id=30220">30220</a>      </td><td style="text-align: right;">   76.67</td></tr>
+<tr><td>22:20 </td><td>VazzVegas       </td><td><a href="https://www.playstationtrophies.org/profiles/VazzVegas/log?id=9864">9864</a>         </td><td style="text-align: right;">   52.61</td></tr>
 <tr><td>22:26 </td><td>wrestlefanatic77</td><td><a href="https://www.playstationtrophies.org/profiles/wrestlefanatic77/log?id=17583">17583</a></td><td style="text-align: right;">   83.32</td></tr>
 <tr><td>22:33 </td><td>danc97-         </td><td><a href="https://www.playstationtrophies.org/profiles/danc97-/log?id=31449">31449</a>         </td><td style="text-align: right;">   22.11</td></tr>
 <tr><td>22:39 </td><td>mattigummi45    </td><td><a href="https://www.playstationtrophies.org/profiles/mattigummi45/log?id=12783">12783</a>    </td><td style="text-align: right;">   41.51</td></tr>
@@ -1498,11 +1498,11 @@
 <tr><td>slammajamma28   </td><td style="text-align: right;">      8</td></tr>
 <tr><td>R1p3r_5000      </td><td style="text-align: right;">      8</td></tr>
 <tr><td>Road2unner      </td><td style="text-align: right;">      7</td></tr>
+<tr><td>VazzVegas       </td><td style="text-align: right;">      7</td></tr>
 <tr><td>diskdocx        </td><td style="text-align: right;">      5</td></tr>
 <tr><td>Xemik           </td><td style="text-align: right;">      5</td></tr>
 <tr><td>Barra333        </td><td style="text-align: right;">      4</td></tr>
 <tr><td>clayser         </td><td style="text-align: right;">      4</td></tr>
-<tr><td>VazzVegas       </td><td style="text-align: right;">      4</td></tr>
 <tr><td>Meikoro         </td><td style="text-align: right;">      1</td></tr>
 <tr><td>sum1_worsethan_u</td><td style="text-align: right;">      1</td></tr>
 </tbody>
@@ -3322,7 +3322,7 @@
 <tr><td>MISSING                                                                              </td><td>MISSING </td><td style="text-align: right;">       02</td></tr>
 <tr><td>MISSING                                                                              </td><td>MISSING </td><td style="text-align: right;">       03</td></tr>
 <tr><td>MISSING                                                                              </td><td>MISSING </td><td style="text-align: right;">       04</td></tr>
-<tr><td>MISSING                                                                              </td><td>MISSING </td><td style="text-align: right;">       05</td></tr>
+<tr><td><a href="https://www.playstationtrophies.org/profiles/VazzVegas/log?id=9863">9863</a></td><td>54.86   </td><td style="text-align: right;">       05</td></tr>
 <tr><td>MISSING                                                                              </td><td>MISSING </td><td style="text-align: right;">       06</td></tr>
 <tr><td>MISSING                                                                              </td><td>MISSING </td><td style="text-align: right;">       07</td></tr>
 <tr><td>MISSING                                                                              </td><td>MISSING </td><td style="text-align: right;">       08</td></tr>
@@ -3331,7 +3331,7 @@
 <tr><td>MISSING                                                                              </td><td>MISSING </td><td style="text-align: right;">       11</td></tr>
 <tr><td>MISSING                                                                              </td><td>MISSING </td><td style="text-align: right;">       12</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/VazzVegas/log?id=9860">9860</a></td><td>61.57   </td><td style="text-align: right;">       13</td></tr>
-<tr><td>MISSING                                                                              </td><td>MISSING </td><td style="text-align: right;">       14</td></tr>
+<tr><td><a href="https://www.playstationtrophies.org/profiles/VazzVegas/log?id=9864">9864</a></td><td>52.61   </td><td style="text-align: right;">       14</td></tr>
 <tr><td>MISSING                                                                              </td><td>MISSING </td><td style="text-align: right;">       15</td></tr>
 <tr><td>MISSING                                                                              </td><td>MISSING </td><td style="text-align: right;">       16</td></tr>
 <tr><td>MISSING                                                                              </td><td>MISSING </td><td style="text-align: right;">       17</td></tr>
@@ -3371,7 +3371,7 @@
 <tr><td>MISSING                                                                              </td><td>MISSING </td><td style="text-align: right;">       51</td></tr>
 <tr><td>MISSING                                                                              </td><td>MISSING </td><td style="text-align: right;">       52</td></tr>
 <tr><td>MISSING                                                                              </td><td>MISSING </td><td style="text-align: right;">       53</td></tr>
-<tr><td>MISSING                                                                              </td><td>MISSING </td><td style="text-align: right;">       54</td></tr>
+<tr><td><a href="https://www.playstationtrophies.org/profiles/VazzVegas/log?id=9862">9862</a></td><td>56.41   </td><td style="text-align: right;">       54</td></tr>
 <tr><td>MISSING                                                                              </td><td>MISSING </td><td style="text-align: right;">       55</td></tr>
 <tr><td>MISSING                                                                              </td><td>MISSING </td><td style="text-align: right;">       56</td></tr>
 <tr><td>MISSING                                                                              </td><td>MISSING </td><td style="text-align: right;">       57</td></tr>
