--- a/tracker.html
+++ b/tracker.html
@@ -6,11 +6,11 @@
 <script src='js/jquery.js'></script>
 <script src='js/script.js'></script>
 <img src="banner.png" alt="PST TIME EVENT">
-<h3 value="utc" onClick="swapTime(event)">as of 2023/05/03 09:06:42 AM UTC</h3>
-<h4>as of 2023/05/03 09:06:42 AM UTC</h3>
+<h3 value="utc" onClick="swapTime(event)">as of 2023/05/03 10:06:42 AM UTC</h3>
+<h4>as of 2023/05/03 10:06:42 AM UTC</h3>
 <div>Times are tracked and claimed automatically.<br>Post in the <a href='https://www.playstationtrophies.org/forum/topic/334336-wait-a-minute-~-discussion/'>discussion thread</a> if you see any discrepancies and for further rules.</div><br>
 <div id="goal-count"><table><thead><tr class='percentageFill'><th>Current</th><th>Remaining</th><th>Progress</th></tr></thead>
-<tbody><tr class='percentageFill'><td>449</td><td>951</td><td id="goalPercentage">32.07%</td></tr></tbody></table></div><br>
+<tbody><tr class='percentageFill'><td>453</td><td>947</td><td id="goalPercentage">32.36%</td></tr></tbody></table></div><br>
 <div class="tab"><button class="tablinks active" onclick="openTab(event, 'remaining')">Remaining</button>
 <button class="tablinks" onclick="openTab(event, 'claimed')">Claimed</button>
 <button class="tablinks" onclick="openTab(event, 'leaderboard')">LB</button>
@@ -385,7 +385,6 @@
 <tr><td>07:42</tr></td>
 <tr><td>07:43</tr></td>
 <tr><td>07:44</tr></td>
-<tr><td>07:45</tr></td>
 <tr><td>07:46</tr></td>
 <tr><td>07:47</tr></td>
 <tr><td>07:48</tr></td>
@@ -405,7 +404,6 @@
 <tr><td>08:14</tr></td>
 <tr><td>08:15</tr></td>
 <tr><td>08:16</tr></td>
-<tr><td>08:17</tr></td>
 <tr><td>08:18</tr></td>
 <tr><td>08:19</tr></td>
 <tr><td>08:20</tr></td>
@@ -426,7 +424,6 @@
 <tr><td>08:37</tr></td>
 <tr><td>08:38</tr></td>
 <tr><td>08:39</tr></td>
-<tr><td>08:41</tr></td>
 <tr><td>08:42</tr></td>
 <tr><td>08:43</tr></td>
 <tr><td>08:44</tr></td>
@@ -446,7 +443,6 @@
 <tr><td>09:01</tr></td>
 <tr><td>09:02</tr></td>
 <tr><td>09:03</tr></td>
-<tr><td>09:04</tr></td>
 <tr><td>09:05</tr></td>
 <tr><td>09:06</tr></td>
 <tr><td>09:08</tr></td>
@@ -1125,6 +1121,7 @@
 <tr><td>06:58 </td><td>Jerry_Appleby   </td><td><a href="https://www.playstationtrophies.org/profiles/Jerry_Appleby/log?id=32542">32542</a>   </td><td style="text-align: right;">   16.91</td></tr>
 <tr><td>07:27 </td><td>R1p3r_5000      </td><td><a href="https://www.playstationtrophies.org/profiles/R1p3r_5000/log?id=18887">18887</a>      </td><td style="text-align: right;">   76.92</td></tr>
 <tr><td>07:33 </td><td>Dolken_swe      </td><td><a href="https://www.playstationtrophies.org/profiles/Dolken_swe/log?id=18896">18896</a>      </td><td style="text-align: right;">   11.29</td></tr>
+<tr><td>07:45 </td><td>R1p3r_5000      </td><td><a href="https://www.playstationtrophies.org/profiles/R1p3r_5000/log?id=18897">18897</a>      </td><td style="text-align: right;">   68.17</td></tr>
 <tr><td>07:54 </td><td>R1p3r_5000      </td><td><a href="https://www.playstationtrophies.org/profiles/R1p3r_5000/log?id=18889">18889</a>      </td><td style="text-align: right;">   86.97</td></tr>
 <tr><td>07:56 </td><td>Zetberg         </td><td><a href="https://www.playstationtrophies.org/profiles/Zetberg/log?id=28145">28145</a>         </td><td style="text-align: right;">   99.82</td></tr>
 <tr><td>07:57 </td><td>Zetberg         </td><td><a href="https://www.playstationtrophies.org/profiles/Zetberg/log?id=28146">28146</a>         </td><td style="text-align: right;">   99.63</td></tr>
@@ -1137,12 +1134,15 @@
 <tr><td>08:04 </td><td>Zetberg         </td><td><a href="https://www.playstationtrophies.org/profiles/Zetberg/log?id=28153">28153</a>         </td><td style="text-align: right;">   99.51</td></tr>
 <tr><td>08:05 </td><td>Zetberg         </td><td><a href="https://www.playstationtrophies.org/profiles/Zetberg/log?id=28154">28154</a>         </td><td style="text-align: right;">   99.51</td></tr>
 <tr><td>08:07 </td><td>R1p3r_5000      </td><td><a href="https://www.playstationtrophies.org/profiles/R1p3r_5000/log?id=18892">18892</a>      </td><td style="text-align: right;">   65   </td></tr>
+<tr><td>08:17 </td><td>R1p3r_5000      </td><td><a href="https://www.playstationtrophies.org/profiles/R1p3r_5000/log?id=18898">18898</a>      </td><td style="text-align: right;">   60.94</td></tr>
 <tr><td>08:29 </td><td>R1p3r_5000      </td><td><a href="https://www.playstationtrophies.org/profiles/R1p3r_5000/log?id=18893">18893</a>      </td><td style="text-align: right;">   79.77</td></tr>
 <tr><td>08:36 </td><td>R1p3r_5000      </td><td><a href="https://www.playstationtrophies.org/profiles/R1p3r_5000/log?id=18894">18894</a>      </td><td style="text-align: right;">   78.12</td></tr>
 <tr><td>08:40 </td><td>Dolken_swe      </td><td><a href="https://www.playstationtrophies.org/profiles/Dolken_swe/log?id=18897">18897</a>      </td><td style="text-align: right;">    4.06</td></tr>
+<tr><td>08:41 </td><td>R1p3r_5000      </td><td><a href="https://www.playstationtrophies.org/profiles/R1p3r_5000/log?id=18899">18899</a>      </td><td style="text-align: right;">   58.95</td></tr>
 <tr><td>08:50 </td><td>staytrue1985    </td><td><a href="https://www.playstationtrophies.org/profiles/staytrue1985/log?id=14876">14876</a>    </td><td style="text-align: right;">   55.09</td></tr>
 <tr><td>08:55 </td><td>staytrue1985    </td><td><a href="https://www.playstationtrophies.org/profiles/staytrue1985/log?id=14862">14862</a>    </td><td style="text-align: right;">   43.95</td></tr>
 <tr><td>08:59 </td><td>staytrue1985    </td><td><a href="https://www.playstationtrophies.org/profiles/staytrue1985/log?id=14877">14877</a>    </td><td style="text-align: right;">   32.25</td></tr>
+<tr><td>09:04 </td><td>R1p3r_5000      </td><td><a href="https://www.playstationtrophies.org/profiles/R1p3r_5000/log?id=18900">18900</a>      </td><td style="text-align: right;">   57.11</td></tr>
 <tr><td>09:07 </td><td>staytrue1985    </td><td><a href="https://www.playstationtrophies.org/profiles/staytrue1985/log?id=14878">14878</a>    </td><td style="text-align: right;">   40.32</td></tr>
 <tr><td>09:14 </td><td>staytrue1985    </td><td><a href="https://www.playstationtrophies.org/profiles/staytrue1985/log?id=14863">14863</a>    </td><td style="text-align: right;">   41   </td></tr>
 <tr><td>09:24 </td><td>staytrue1985    </td><td><a href="https://www.playstationtrophies.org/profiles/staytrue1985/log?id=14879">14879</a>    </td><td style="text-align: right;">   42.2 </td></tr>
@@ -1494,11 +1494,11 @@
 <tr><td>mattigummi45    </td><td style="text-align: right;">     16</td></tr>
 <tr><td>danc97-         </td><td style="text-align: right;">     14</td></tr>
 <tr><td>Dolken_swe      </td><td style="text-align: right;">     14</td></tr>
+<tr><td>R1p3r_5000      </td><td style="text-align: right;">     12</td></tr>
 <tr><td>Da-Eastside     </td><td style="text-align: right;">     10</td></tr>
 <tr><td>slammajamma28   </td><td style="text-align: right;">      8</td></tr>
 <tr><td>Barra333        </td><td style="text-align: right;">      8</td></tr>
 <tr><td>Lion_Squid      </td><td style="text-align: right;">      8</td></tr>
-<tr><td>R1p3r_5000      </td><td style="text-align: right;">      8</td></tr>
 <tr><td>diskdocx        </td><td style="text-align: right;">      7</td></tr>
 <tr><td>Road2unner      </td><td style="text-align: right;">      7</td></tr>
 <tr><td>VazzVegas       </td><td style="text-align: right;">      7</td></tr>
@@ -2784,14 +2784,14 @@
 <tr><td>MISSING                                                                                 </td><td>MISSING </td><td style="text-align: right;">       05</td></tr>
 <tr><td>MISSING                                                                                 </td><td>MISSING </td><td style="text-align: right;">       06</td></tr>
 <tr><td>MISSING                                                                                 </td><td>MISSING </td><td style="text-align: right;">       07</td></tr>
-<tr><td>MISSING                                                                                 </td><td>MISSING </td><td style="text-align: right;">       08</td></tr>
+<tr><td><a href="https://www.playstationtrophies.org/profiles/R1p3r_5000/log?id=18897">18897</a></td><td>68.17   </td><td style="text-align: right;">       08</td></tr>
 <tr><td>MISSING                                                                                 </td><td>MISSING </td><td style="text-align: right;">       09</td></tr>
 <tr><td>MISSING                                                                                 </td><td>MISSING </td><td style="text-align: right;">       10</td></tr>
 <tr><td>MISSING                                                                                 </td><td>MISSING </td><td style="text-align: right;">       11</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/R1p3r_5000/log?id=18892">18892</a></td><td>65.00   </td><td style="text-align: right;">       12</td></tr>
 <tr><td>MISSING                                                                                 </td><td>MISSING </td><td style="text-align: right;">       13</td></tr>
 <tr><td>MISSING                                                                                 </td><td>MISSING </td><td style="text-align: right;">       14</td></tr>
-<tr><td>MISSING                                                                                 </td><td>MISSING </td><td style="text-align: right;">       15</td></tr>
+<tr><td><a href="https://www.playstationtrophies.org/profiles/R1p3r_5000/log?id=18900">18900</a></td><td>57.11   </td><td style="text-align: right;">       15</td></tr>
 <tr><td>MISSING                                                                                 </td><td>MISSING </td><td style="text-align: right;">       16</td></tr>
 <tr><td>MISSING                                                                                 </td><td>MISSING </td><td style="text-align: right;">       17</td></tr>
 <tr><td>MISSING                                                                                 </td><td>MISSING </td><td style="text-align: right;">       18</td></tr>
@@ -2832,9 +2832,9 @@
 <tr><td>MISSING                                                                                 </td><td>MISSING </td><td style="text-align: right;">       53</td></tr>
 <tr><td>MISSING                                                                                 </td><td>MISSING </td><td style="text-align: right;">       54</td></tr>
 <tr><td>MISSING                                                                                 </td><td>MISSING </td><td style="text-align: right;">       55</td></tr>
-<tr><td>MISSING                                                                                 </td><td>MISSING </td><td style="text-align: right;">       56</td></tr>
+<tr><td><a href="https://www.playstationtrophies.org/profiles/R1p3r_5000/log?id=18898">18898</a></td><td>60.94   </td><td style="text-align: right;">       56</td></tr>
 <tr><td>MISSING                                                                                 </td><td>MISSING </td><td style="text-align: right;">       57</td></tr>
-<tr><td>MISSING                                                                                 </td><td>MISSING </td><td style="text-align: right;">       58</td></tr>
+<tr><td><a href="https://www.playstationtrophies.org/profiles/R1p3r_5000/log?id=18899">18899</a></td><td>58.95   </td><td style="text-align: right;">       58</td></tr>
 <tr><td>MISSING                                                                                 </td><td>MISSING </td><td style="text-align: right;">       59</td></tr>
 </tbody>
 </table></div>
