--- a/tracker.html
+++ b/tracker.html
@@ -6,11 +6,11 @@
 <script src='js/jquery.js'></script>
 <script src='js/script.js'></script>
 <img src="banner.png" alt="PST TIME EVENT">
-<h3 value="utc" onClick="swapTime(event)">as of 2023/05/03 12:06:43 PM UTC</h3>
-<h4>as of 2023/05/03 12:06:43 PM UTC</h3>
+<h3 value="utc" onClick="swapTime(event)">as of 2023/05/03 01:06:42 PM UTC</h3>
+<h4>as of 2023/05/03 01:06:42 PM UTC</h3>
 <div>Times are tracked and claimed automatically.<br>Post in the <a href='https://www.playstationtrophies.org/forum/topic/334336-wait-a-minute-~-discussion/'>discussion thread</a> if you see any discrepancies and for further rules.</div><br>
 <div id="goal-count"><table><thead><tr class='percentageFill'><th>Current</th><th>Remaining</th><th>Progress</th></tr></thead>
-<tbody><tr class='percentageFill'><td>454</td><td>946</td><td id="goalPercentage">32.43%</td></tr></tbody></table></div><br>
+<tbody><tr class='percentageFill'><td>455</td><td>945</td><td id="goalPercentage">32.5%</td></tr></tbody></table></div><br>
 <div class="tab"><button class="tablinks active" onclick="openTab(event, 'remaining')">Remaining</button>
 <button class="tablinks" onclick="openTab(event, 'claimed')">Claimed</button>
 <button class="tablinks" onclick="openTab(event, 'leaderboard')">LB</button>
@@ -614,7 +614,6 @@
 <tr><td>12:49</tr></td>
 <tr><td>12:50</tr></td>
 <tr><td>12:51</tr></td>
-<tr><td>12:52</tr></td>
 <tr><td>12:53</tr></td>
 <tr><td>12:54</tr></td>
 <tr><td>12:55</tr></td>
@@ -1198,6 +1197,7 @@
 <tr><td>12:30 </td><td>mattigummi45    </td><td><a href="https://www.playstationtrophies.org/profiles/mattigummi45/log?id=12791">12791</a>    </td><td style="text-align: right;">   26.32</td></tr>
 <tr><td>12:32 </td><td>Hemming87       </td><td><a href="https://www.playstationtrophies.org/profiles/Hemming87/log?id=40310">40310</a>       </td><td style="text-align: right;">   54.72</td></tr>
 <tr><td>12:38 </td><td>staytrue1985    </td><td><a href="https://www.playstationtrophies.org/profiles/staytrue1985/log?id=14870">14870</a>    </td><td style="text-align: right;">   78.71</td></tr>
+<tr><td>12:52 </td><td>danc97-         </td><td><a href="https://www.playstationtrophies.org/profiles/danc97-/log?id=31453">31453</a>         </td><td style="text-align: right;">   36.61</td></tr>
 <tr><td>13:00 </td><td>Road2unner      </td><td><a href="https://www.playstationtrophies.org/profiles/Road2unner/log?id=19119">19119</a>      </td><td style="text-align: right;">   23.9 </td></tr>
 <tr><td>13:12 </td><td>Hemming87       </td><td><a href="https://www.playstationtrophies.org/profiles/Hemming87/log?id=40311">40311</a>       </td><td style="text-align: right;">   53.74</td></tr>
 <tr><td>13:13 </td><td>Hemming87       </td><td><a href="https://www.playstationtrophies.org/profiles/Hemming87/log?id=40312">40312</a>       </td><td style="text-align: right;">   52.83</td></tr>
@@ -1492,7 +1492,7 @@
 <tr><td>staytrue1985    </td><td style="text-align: right;">     24</td></tr>
 <tr><td>Jerry_Appleby   </td><td style="text-align: right;">     18</td></tr>
 <tr><td>mattigummi45    </td><td style="text-align: right;">     16</td></tr>
-<tr><td>danc97-         </td><td style="text-align: right;">     14</td></tr>
+<tr><td>danc97-         </td><td style="text-align: right;">     15</td></tr>
 <tr><td>Dolken_swe      </td><td style="text-align: right;">     14</td></tr>
 <tr><td>R1p3r_5000      </td><td style="text-align: right;">     12</td></tr>
 <tr><td>Da-Eastside     </td><td style="text-align: right;">     10</td></tr>
@@ -1952,7 +1952,7 @@
 <tr><td>MISSING                                                                              </td><td>MISSING </td><td style="text-align: right;">       55</td></tr>
 <tr><td>MISSING                                                                              </td><td>MISSING </td><td style="text-align: right;">       56</td></tr>
 <tr><td>MISSING                                                                              </td><td>MISSING </td><td style="text-align: right;">       57</td></tr>
-<tr><td>MISSING                                                                              </td><td>MISSING </td><td style="text-align: right;">       58</td></tr>
+<tr><td><a href="https://www.playstationtrophies.org/profiles/danc97-/log?id=31453">31453</a></td><td>36.61   </td><td style="text-align: right;">       58</td></tr>
 <tr><td>MISSING                                                                              </td><td>MISSING </td><td style="text-align: right;">       59</td></tr>
 </tbody>
 </table></div>
