Updating tracker via automation

--- a/tracker.html
+++ b/tracker.html
@@ -6,11 +6,11 @@
 <script src='js/jquery.js'></script>
 <script src='js/script.js'></script>
 <img src="banner.png" alt="PST TIME EVENT">
-<h3 value="utc" onClick="swapTime(event)">as of 2023/05/03 01:06:42 PM UTC</h3>
-<h4>as of 2023/05/03 01:06:42 PM UTC</h3>
+<h3 value="utc" onClick="swapTime(event)">as of 2023/05/03 02:06:43 PM UTC</h3>
+<h4>as of 2023/05/03 02:06:43 PM UTC</h3>
 <div>Times are tracked and claimed automatically.<br>Post in the <a href='https://www.playstationtrophies.org/forum/topic/334336-wait-a-minute-~-discussion/'>discussion thread</a> if you see any discrepancies and for further rules.</div><br>
 <div id="goal-count"><table><thead><tr class='percentageFill'><th>Current</th><th>Remaining</th><th>Progress</th></tr></thead>
-<tbody><tr class='percentageFill'><td>455</td><td>945</td><td id="goalPercentage">32.5%</td></tr></tbody></table></div><br>
+<tbody><tr class='percentageFill'><td>456</td><td>944</td><td id="goalPercentage">32.57%</td></tr></tbody></table></div><br>
 <div class="tab"><button class="tablinks active" onclick="openTab(event, 'remaining')">Remaining</button>
 <button class="tablinks" onclick="openTab(event, 'claimed')">Claimed</button>
 <button class="tablinks" onclick="openTab(event, 'leaderboard')">LB</button>
@@ -524,7 +524,6 @@
 <tr><td>10:57</tr></td>
 <tr><td>10:59</tr></td>
 <tr><td>11:01</tr></td>
-<tr><td>11:02</tr></td>
 <tr><td>11:03</tr></td>
 <tr><td>11:04</tr></td>
 <tr><td>11:05</tr></td>
@@ -1177,6 +1176,7 @@
 <tr><td>10:55 </td><td>mattigummi45    </td><td><a href="https://www.playstationtrophies.org/profiles/mattigummi45/log?id=12788">12788</a>    </td><td style="text-align: right;">   46.78</td></tr>
 <tr><td>10:58 </td><td>mattigummi45    </td><td><a href="https://www.playstationtrophies.org/profiles/mattigummi45/log?id=12789">12789</a>    </td><td style="text-align: right;">   58.62</td></tr>
 <tr><td>11:00 </td><td>Dolken_swe      </td><td><a href="https://www.playstationtrophies.org/profiles/Dolken_swe/log?id=18899">18899</a>      </td><td style="text-align: right;">   10.31</td></tr>
+<tr><td>11:02 </td><td>mattigummi45    </td><td><a href="https://www.playstationtrophies.org/profiles/mattigummi45/log?id=12793">12793</a>    </td><td style="text-align: right;">    9.39</td></tr>
 <tr><td>11:23 </td><td>Dolken_swe      </td><td><a href="https://www.playstationtrophies.org/profiles/Dolken_swe/log?id=18900">18900</a>      </td><td style="text-align: right;">   12.35</td></tr>
 <tr><td>11:26 </td><td>Hemming87       </td><td><a href="https://www.playstationtrophies.org/profiles/Hemming87/log?id=40292">40292</a>       </td><td style="text-align: right;">   45.45</td></tr>
 <tr><td>11:32 </td><td>Hemming87       </td><td><a href="https://www.playstationtrophies.org/profiles/Hemming87/log?id=40294">40294</a>       </td><td style="text-align: right;">   24.19</td></tr>
@@ -1374,30 +1374,30 @@
 <tr><td>20:10 </td><td>VazzVegas       </td><td><a href="https://www.playstationtrophies.org/profiles/VazzVegas/log?id=9861">9861</a>         </td><td style="text-align: right;">   60.1 </td></tr>
 <tr><td>20:11 </td><td>Martz4040       </td><td><a href="https://www.playstationtrophies.org/profiles/Martz4040/log?id=13206">13206</a>       </td><td style="text-align: right;">   98.62</td></tr>
 <tr><td>20:12 </td><td>danc97-         </td><td><a href="https://www.playstationtrophies.org/profiles/danc97-/log?id=31437">31437</a>         </td><td style="text-align: right;">   26.98</td></tr>
-<tr><td>20:13 </td><td>Darth_Krid      </td><td><a href="https://www.playstationtrophies.org/profiles/Darth_Krid/log?id=30310">30310</a>      </td><td style="text-align: right;">   61.78</td></tr>
+<tr><td>20:13 </td><td>Darth_Krid      </td><td><a href="https://www.playstationtrophies.org/profiles/Darth_Krid/log?id=30310">30310</a>      </td><td style="text-align: right;">   61.79</td></tr>
 <tr><td>20:14 </td><td>mattigummi45    </td><td><a href="https://www.playstationtrophies.org/profiles/mattigummi45/log?id=12772">12772</a>    </td><td style="text-align: right;">   42.83</td></tr>
 <tr><td>20:16 </td><td>Darth_Krid      </td><td><a href="https://www.playstationtrophies.org/profiles/Darth_Krid/log?id=30311">30311</a>      </td><td style="text-align: right;">    4.57</td></tr>
 <tr><td>20:21 </td><td>Martz4040       </td><td><a href="https://www.playstationtrophies.org/profiles/Martz4040/log?id=13208">13208</a>       </td><td style="text-align: right;">   97.08</td></tr>
-<tr><td>20:27 </td><td>Darth_Krid      </td><td><a href="https://www.playstationtrophies.org/profiles/Darth_Krid/log?id=30313">30313</a>      </td><td style="text-align: right;">   16.34</td></tr>
+<tr><td>20:27 </td><td>Darth_Krid      </td><td><a href="https://www.playstationtrophies.org/profiles/Darth_Krid/log?id=30313">30313</a>      </td><td style="text-align: right;">   16.35</td></tr>
 <tr><td>20:28 </td><td>mattigummi45    </td><td><a href="https://www.playstationtrophies.org/profiles/mattigummi45/log?id=12773">12773</a>    </td><td style="text-align: right;">   88.06</td></tr>
 <tr><td>20:29 </td><td>mattigummi45    </td><td><a href="https://www.playstationtrophies.org/profiles/mattigummi45/log?id=12774">12774</a>    </td><td style="text-align: right;">   87.08</td></tr>
-<tr><td>20:31 </td><td>Darth_Krid      </td><td><a href="https://www.playstationtrophies.org/profiles/Darth_Krid/log?id=30316">30316</a>      </td><td style="text-align: right;">   23.88</td></tr>
+<tr><td>20:31 </td><td>Darth_Krid      </td><td><a href="https://www.playstationtrophies.org/profiles/Darth_Krid/log?id=30316">30316</a>      </td><td style="text-align: right;">   23.89</td></tr>
 <tr><td>20:33 </td><td>mattigummi45    </td><td><a href="https://www.playstationtrophies.org/profiles/mattigummi45/log?id=12775">12775</a>    </td><td style="text-align: right;">   28.1 </td></tr>
-<tr><td>20:34 </td><td>Darth_Krid      </td><td><a href="https://www.playstationtrophies.org/profiles/Darth_Krid/log?id=30318">30318</a>      </td><td style="text-align: right;">   13.41</td></tr>
-<tr><td>20:35 </td><td>Darth_Krid      </td><td><a href="https://www.playstationtrophies.org/profiles/Darth_Krid/log?id=30320">30320</a>      </td><td style="text-align: right;">   15.97</td></tr>
+<tr><td>20:34 </td><td>Darth_Krid      </td><td><a href="https://www.playstationtrophies.org/profiles/Darth_Krid/log?id=30318">30318</a>      </td><td style="text-align: right;">   13.42</td></tr>
+<tr><td>20:35 </td><td>Darth_Krid      </td><td><a href="https://www.playstationtrophies.org/profiles/Darth_Krid/log?id=30320">30320</a>      </td><td style="text-align: right;">   15.98</td></tr>
 <tr><td>20:36 </td><td>Darth_Krid      </td><td><a href="https://www.playstationtrophies.org/profiles/Darth_Krid/log?id=30321">30321</a>      </td><td style="text-align: right;">   12.99</td></tr>
-<tr><td>20:38 </td><td>Darth_Krid      </td><td><a href="https://www.playstationtrophies.org/profiles/Darth_Krid/log?id=30322">30322</a>      </td><td style="text-align: right;">   19.33</td></tr>
+<tr><td>20:38 </td><td>Darth_Krid      </td><td><a href="https://www.playstationtrophies.org/profiles/Darth_Krid/log?id=30322">30322</a>      </td><td style="text-align: right;">   19.34</td></tr>
 <tr><td>20:40 </td><td>Darth_Krid      </td><td><a href="https://www.playstationtrophies.org/profiles/Darth_Krid/log?id=30323">30323</a>      </td><td style="text-align: right;">   14.21</td></tr>
 <tr><td>20:49 </td><td>Darth_Krid      </td><td><a href="https://www.playstationtrophies.org/profiles/Darth_Krid/log?id=30324">30324</a>      </td><td style="text-align: right;">   15.61</td></tr>
 <tr><td>20:51 </td><td>Darth_Krid      </td><td><a href="https://www.playstationtrophies.org/profiles/Darth_Krid/log?id=30325">30325</a>      </td><td style="text-align: right;">   12.64</td></tr>
 <tr><td>20:56 </td><td>Darth_Krid      </td><td><a href="https://www.playstationtrophies.org/profiles/Darth_Krid/log?id=30326">30326</a>      </td><td style="text-align: right;">   13.5 </td></tr>
 <tr><td>20:57 </td><td>Darth_Krid      </td><td><a href="https://www.playstationtrophies.org/profiles/Darth_Krid/log?id=30327">30327</a>      </td><td style="text-align: right;">   38.02</td></tr>
 <tr><td>21:00 </td><td>THE--ALCHEMlST  </td><td><a href="https://www.playstationtrophies.org/profiles/THE--ALCHEMlST/log?id=23643">23643</a>  </td><td style="text-align: right;">   21.87</td></tr>
-<tr><td>21:01 </td><td>Darth_Krid      </td><td><a href="https://www.playstationtrophies.org/profiles/Darth_Krid/log?id=30329">30329</a>      </td><td style="text-align: right;">   11.64</td></tr>
+<tr><td>21:01 </td><td>Darth_Krid      </td><td><a href="https://www.playstationtrophies.org/profiles/Darth_Krid/log?id=30329">30329</a>      </td><td style="text-align: right;">   11.65</td></tr>
 <tr><td>21:02 </td><td>Road2unner      </td><td><a href="https://www.playstationtrophies.org/profiles/Road2unner/log?id=19125">19125</a>      </td><td style="text-align: right;">   10.49</td></tr>
 <tr><td>21:04 </td><td>sum1_worsethan_u</td><td><a href="https://www.playstationtrophies.org/profiles/sum1_worsethan_u/log?id=13408">13408</a></td><td style="text-align: right;">   93.97</td></tr>
-<tr><td>21:05 </td><td>Darth_Krid      </td><td><a href="https://www.playstationtrophies.org/profiles/Darth_Krid/log?id=30331">30331</a>      </td><td style="text-align: right;">   13.82</td></tr>
-<tr><td>21:07 </td><td>Darth_Krid      </td><td><a href="https://www.playstationtrophies.org/profiles/Darth_Krid/log?id=30332">30332</a>      </td><td style="text-align: right;">   13.96</td></tr>
+<tr><td>21:05 </td><td>Darth_Krid      </td><td><a href="https://www.playstationtrophies.org/profiles/Darth_Krid/log?id=30331">30331</a>      </td><td style="text-align: right;">   13.83</td></tr>
+<tr><td>21:07 </td><td>Darth_Krid      </td><td><a href="https://www.playstationtrophies.org/profiles/Darth_Krid/log?id=30332">30332</a>      </td><td style="text-align: right;">   13.97</td></tr>
 <tr><td>21:08 </td><td>danc97-         </td><td><a href="https://www.playstationtrophies.org/profiles/danc97-/log?id=31439">31439</a>         </td><td style="text-align: right;">   47.07</td></tr>
 <tr><td>21:11 </td><td>Darth_Krid      </td><td><a href="https://www.playstationtrophies.org/profiles/Darth_Krid/log?id=30354">30354</a>      </td><td style="text-align: right;">   39.85</td></tr>
 <tr><td>21:12 </td><td>Darth_Krid      </td><td><a href="https://www.playstationtrophies.org/profiles/Darth_Krid/log?id=30382">30382</a>      </td><td style="text-align: right;">   40.27</td></tr>
@@ -1491,7 +1491,7 @@
 <tr><td>THE--ALCHEMlST  </td><td style="text-align: right;">     25</td></tr>
 <tr><td>staytrue1985    </td><td style="text-align: right;">     24</td></tr>
 <tr><td>Jerry_Appleby   </td><td style="text-align: right;">     18</td></tr>
-<tr><td>mattigummi45    </td><td style="text-align: right;">     16</td></tr>
+<tr><td>mattigummi45    </td><td style="text-align: right;">     17</td></tr>
 <tr><td>danc97-         </td><td style="text-align: right;">     15</td></tr>
 <tr><td>Dolken_swe      </td><td style="text-align: right;">     14</td></tr>
 <tr><td>R1p3r_5000      </td><td style="text-align: right;">     12</td></tr>
@@ -1964,7 +1964,7 @@
 <tbody>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Darth_Krid/log?id=30363">30363</a></td><td>71.84   </td><td style="text-align: right;">       00</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Darth_Krid/log?id=30364">30364</a></td><td>53.83   </td><td style="text-align: right;">       01</td></tr>
-<tr><td><a href="https://www.playstationtrophies.org/profiles/Darth_Krid/log?id=30318">30318</a></td><td>13.41   </td><td style="text-align: right;">       02</td></tr>
+<tr><td><a href="https://www.playstationtrophies.org/profiles/Darth_Krid/log?id=30318">30318</a></td><td>13.42   </td><td style="text-align: right;">       02</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Darth_Krid/log?id=30366">30366</a></td><td>60.61   </td><td style="text-align: right;">       03</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Darth_Krid/log?id=30367">30367</a></td><td>58.05   </td><td style="text-align: right;">       04</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Darth_Krid/log?id=30368">30368</a></td><td>56.54   </td><td style="text-align: right;">       05</td></tr>
@@ -1993,11 +1993,11 @@
 <tr><td>MISSING                                                                                 </td><td>MISSING </td><td style="text-align: right;">       28</td></tr>
 <tr><td>MISSING                                                                                 </td><td>MISSING </td><td style="text-align: right;">       29</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Darth_Krid/log?id=30386">30386</a></td><td>35.35   </td><td style="text-align: right;">       30</td></tr>
-<tr><td><a href="https://www.playstationtrophies.org/profiles/Darth_Krid/log?id=30329">30329</a></td><td>11.64   </td><td style="text-align: right;">       31</td></tr>
+<tr><td><a href="https://www.playstationtrophies.org/profiles/Darth_Krid/log?id=30329">30329</a></td><td>11.65   </td><td style="text-align: right;">       31</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Darth_Krid/log?id=30335">30335</a></td><td>89.65   </td><td style="text-align: right;">       32</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Darth_Krid/log?id=30336">30336</a></td><td>82.35   </td><td style="text-align: right;">       33</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Darth_Krid/log?id=30384">30384</a></td><td>38.01   </td><td style="text-align: right;">       34</td></tr>
-<tr><td><a href="https://www.playstationtrophies.org/profiles/Darth_Krid/log?id=30331">30331</a></td><td>13.82   </td><td style="text-align: right;">       35</td></tr>
+<tr><td><a href="https://www.playstationtrophies.org/profiles/Darth_Krid/log?id=30331">30331</a></td><td>13.83   </td><td style="text-align: right;">       35</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Darth_Krid/log?id=30339">30339</a></td><td>69.18   </td><td style="text-align: right;">       36</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Darth_Krid/log?id=30340">30340</a></td><td>67.90   </td><td style="text-align: right;">       37</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Darth_Krid/log?id=30341">30341</a></td><td>65.20   </td><td style="text-align: right;">       38</td></tr>
@@ -2005,13 +2005,13 @@
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Darth_Krid/log?id=30343">30343</a></td><td>63.08   </td><td style="text-align: right;">       40</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Darth_Krid/log?id=30344">30344</a></td><td>60.52   </td><td style="text-align: right;">       41</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Darth_Krid/log?id=30345">30345</a></td><td>97.39   </td><td style="text-align: right;">       42</td></tr>
-<tr><td><a href="https://www.playstationtrophies.org/profiles/Darth_Krid/log?id=30332">30332</a></td><td>13.96   </td><td style="text-align: right;">       43</td></tr>
+<tr><td><a href="https://www.playstationtrophies.org/profiles/Darth_Krid/log?id=30332">30332</a></td><td>13.97   </td><td style="text-align: right;">       43</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Darth_Krid/log?id=30347">30347</a></td><td>78.40   </td><td style="text-align: right;">       44</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Darth_Krid/log?id=30348">30348</a></td><td>46.77   </td><td style="text-align: right;">       45</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Darth_Krid/log?id=30349">30349</a></td><td>45.55   </td><td style="text-align: right;">       46</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Darth_Krid/log?id=30325">30325</a></td><td>12.64   </td><td style="text-align: right;">       47</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Darth_Krid/log?id=30351">30351</a></td><td>63.25   </td><td style="text-align: right;">       48</td></tr>
-<tr><td><a href="https://www.playstationtrophies.org/profiles/Darth_Krid/log?id=30322">30322</a></td><td>19.33   </td><td style="text-align: right;">       49</td></tr>
+<tr><td><a href="https://www.playstationtrophies.org/profiles/Darth_Krid/log?id=30322">30322</a></td><td>19.34   </td><td style="text-align: right;">       49</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Darth_Krid/log?id=30353">30353</a></td><td>44.02   </td><td style="text-align: right;">       50</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Darth_Krid/log?id=30354">30354</a></td><td>39.85   </td><td style="text-align: right;">       51</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Darth_Krid/log?id=30355">30355</a></td><td>41.97   </td><td style="text-align: right;">       52</td></tr>
@@ -2646,7 +2646,7 @@
 <tr><td><a href="https://www.playstationtrophies.org/profiles/mattigummi45/log?id=12780">12780</a></td><td>24.85   </td><td style="text-align: right;">       01</td></tr>
 <tr><td>MISSING                                                                                   </td><td>MISSING </td><td style="text-align: right;">       02</td></tr>
 <tr><td>MISSING                                                                                   </td><td>MISSING </td><td style="text-align: right;">       03</td></tr>
-<tr><td>MISSING                                                                                   </td><td>MISSING </td><td style="text-align: right;">       04</td></tr>
+<tr><td><a href="https://www.playstationtrophies.org/profiles/mattigummi45/log?id=12793">12793</a></td><td>9.39    </td><td style="text-align: right;">       04</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/mattigummi45/log?id=12774">12774</a></td><td>87.08   </td><td style="text-align: right;">       05</td></tr>
 <tr><td>MISSING                                                                                   </td><td>MISSING </td><td style="text-align: right;">       06</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/mattigummi45/log?id=12772">12772</a></td><td>42.83   </td><td style="text-align: right;">       07</td></tr>
