--- a/tracker.html
+++ b/tracker.html
@@ -6,11 +6,11 @@
 <script src='js/jquery.js'></script>
 <script src='js/script.js'></script>
 <img src="banner.png" alt="PST TIME EVENT">
-<h3 value="utc" onClick="swapTime(event)">as of 2023/05/04 05:25:14 AM UTC</h3>
-<h4>as of 2023/05/04 05:25:14 AM UTC</h3>
+<h3 value="utc" onClick="swapTime(event)">as of 2023/05/04 06:25:14 AM UTC</h3>
+<h4>as of 2023/05/04 06:25:14 AM UTC</h3>
 <div>Times are tracked and claimed automatically.<br>Post in the <a href='https://www.playstationtrophies.org/forum/topic/334336-wait-a-minute-~-discussion/'>discussion thread</a> if you see any discrepancies and for further rules.</div><br>
 <div id="goal-count"><table><thead><tr class='percentageFill'><th>Current</th><th>Remaining</th><th>Progress</th></tr></thead>
-<tbody><tr class='percentageFill'><td>581</td><td>859</td><td id="goalPercentage">40.35%</td></tr></tbody></table></div><br>
+<tbody><tr class='percentageFill'><td>584</td><td>856</td><td id="goalPercentage">40.56%</td></tr></tbody></table></div><br>
 <div class="tab"><button class="tablinks active" onclick="openTab(event, 'remaining')">Remaining</button>
 <button class="tablinks" onclick="openTab(event, 'claimed')">Claimed</button>
 <button class="tablinks" onclick="openTab(event, 'leaderboard')">LB</button>
@@ -184,7 +184,6 @@
 <tr><td>04:17</tr></td>
 <tr><td>04:19</tr></td>
 <tr><td>04:20</tr></td>
-<tr><td>04:22</tr></td>
 <tr><td>04:23</tr></td>
 <tr><td>04:25</tr></td>
 <tr><td>04:26</tr></td>
@@ -239,7 +238,6 @@
 <tr><td>05:18</tr></td>
 <tr><td>05:19</tr></td>
 <tr><td>05:20</tr></td>
-<tr><td>05:21</tr></td>
 <tr><td>05:23</tr></td>
 <tr><td>05:24</tr></td>
 <tr><td>05:25</tr></td>
@@ -277,7 +275,6 @@
 <tr><td>06:02</tr></td>
 <tr><td>06:03</tr></td>
 <tr><td>06:05</tr></td>
-<tr><td>06:06</tr></td>
 <tr><td>06:07</tr></td>
 <tr><td>06:09</tr></td>
 <tr><td>06:10</tr></td>
@@ -991,17 +988,20 @@
 <tr><td>04:13 </td><td>Lion_Squid      </td><td><a href="https://www.playstationtrophies.org/profiles/Lion_Squid/log?id=12839">12839</a>      </td><td style="text-align: right;">   88.5 </td></tr>
 <tr><td>04:18 </td><td>Jerry_Appleby   </td><td><a href="https://www.playstationtrophies.org/profiles/Jerry_Appleby/log?id=32548">32548</a>   </td><td style="text-align: right;">   11.58</td></tr>
 <tr><td>04:21 </td><td>Jerry_Appleby   </td><td><a href="https://www.playstationtrophies.org/profiles/Jerry_Appleby/log?id=32550">32550</a>   </td><td style="text-align: right;">   14.8 </td></tr>
+<tr><td>04:22 </td><td>Jerry_Appleby   </td><td><a href="https://www.playstationtrophies.org/profiles/Jerry_Appleby/log?id=32554">32554</a>   </td><td style="text-align: right;">   56.47</td></tr>
 <tr><td>04:24 </td><td>Lion_Squid      </td><td><a href="https://www.playstationtrophies.org/profiles/Lion_Squid/log?id=12840">12840</a>      </td><td style="text-align: right;">   86.69</td></tr>
 <tr><td>05:03 </td><td>Jerry_Appleby   </td><td><a href="https://www.playstationtrophies.org/profiles/Jerry_Appleby/log?id=32534">32534</a>   </td><td style="text-align: right;">    2.86</td></tr>
 <tr><td>05:06 </td><td>Jerry_Appleby   </td><td><a href="https://www.playstationtrophies.org/profiles/Jerry_Appleby/log?id=32551">32551</a>   </td><td style="text-align: right;">   77.75</td></tr>
 <tr><td>05:16 </td><td>Jerry_Appleby   </td><td><a href="https://www.playstationtrophies.org/profiles/Jerry_Appleby/log?id=32535">32535</a>   </td><td style="text-align: right;">    3.49</td></tr>
-<tr><td>05:22 </td><td>Lion_Squid      </td><td><a href="https://www.playstationtrophies.org/profiles/Lion_Squid/log?id=12841">12841</a>      </td><td style="text-align: right;">   80.26</td></tr>
+<tr><td>05:21 </td><td>Jerry_Appleby   </td><td><a href="https://www.playstationtrophies.org/profiles/Jerry_Appleby/log?id=32555">32555</a>   </td><td style="text-align: right;">   55.74</td></tr>
+<tr><td>05:22 </td><td>Jerry_Appleby   </td><td><a href="https://www.playstationtrophies.org/profiles/Jerry_Appleby/log?id=32556">32556</a>   </td><td style="text-align: right;">   47.59</td></tr>
 <tr><td>05:28 </td><td>Martz4040       </td><td><a href="https://www.playstationtrophies.org/profiles/Martz4040/log?id=13233">13233</a>       </td><td style="text-align: right;">   94.59</td></tr>
 <tr><td>05:32 </td><td>Lion_Squid      </td><td><a href="https://www.playstationtrophies.org/profiles/Lion_Squid/log?id=12842">12842</a>      </td><td style="text-align: right;">   78.84</td></tr>
 <tr><td>05:37 </td><td>Jerry_Appleby   </td><td><a href="https://www.playstationtrophies.org/profiles/Jerry_Appleby/log?id=32536">32536</a>   </td><td style="text-align: right;">    2.59</td></tr>
 <tr><td>05:57 </td><td>Jerry_Appleby   </td><td><a href="https://www.playstationtrophies.org/profiles/Jerry_Appleby/log?id=32537">32537</a>   </td><td style="text-align: right;">   34.28</td></tr>
 <tr><td>05:59 </td><td>Jerry_Appleby   </td><td><a href="https://www.playstationtrophies.org/profiles/Jerry_Appleby/log?id=32538">32538</a>   </td><td style="text-align: right;">   41.92</td></tr>
 <tr><td>06:04 </td><td>Lion_Squid      </td><td><a href="https://www.playstationtrophies.org/profiles/Lion_Squid/log?id=12843">12843</a>      </td><td style="text-align: right;">   77.81</td></tr>
+<tr><td>06:06 </td><td>Jerry_Appleby   </td><td><a href="https://www.playstationtrophies.org/profiles/Jerry_Appleby/log?id=32557">32557</a>   </td><td style="text-align: right;">   75.7 </td></tr>
 <tr><td>06:08 </td><td>Jerry_Appleby   </td><td><a href="https://www.playstationtrophies.org/profiles/Jerry_Appleby/log?id=32553">32553</a>   </td><td style="text-align: right;">   47.52</td></tr>
 <tr><td>06:20 </td><td>Jerry_Appleby   </td><td><a href="https://www.playstationtrophies.org/profiles/Jerry_Appleby/log?id=32539">32539</a>   </td><td style="text-align: right;">   11.95</td></tr>
 <tr><td>06:40 </td><td>Lion_Squid      </td><td><a href="https://www.playstationtrophies.org/profiles/Lion_Squid/log?id=12844">12844</a>      </td><td style="text-align: right;">   71.19</td></tr>
@@ -1097,7 +1097,7 @@
 <tr><td>13:00 </td><td>Road2unner      </td><td><a href="https://www.playstationtrophies.org/profiles/Road2unner/log?id=19119">19119</a>      </td><td style="text-align: right;">   23.9 </td></tr>
 <tr><td>13:12 </td><td>Hemming87       </td><td><a href="https://www.playstationtrophies.org/profiles/Hemming87/log?id=40311">40311</a>       </td><td style="text-align: right;">   54.72</td></tr>
 <tr><td>13:13 </td><td>Hemming87       </td><td><a href="https://www.playstationtrophies.org/profiles/Hemming87/log?id=40312">40312</a>       </td><td style="text-align: right;">   53.66</td></tr>
-<tr><td>13:20 </td><td>wrestlefanatic77</td><td><a href="https://www.playstationtrophies.org/profiles/wrestlefanatic77/log?id=17553">17553</a></td><td style="text-align: right;">   93.14</td></tr>
+<tr><td>13:20 </td><td>wrestlefanatic77</td><td><a href="https://www.playstationtrophies.org/profiles/wrestlefanatic77/log?id=17553">17553</a></td><td style="text-align: right;">   93.17</td></tr>
 <tr><td>13:21 </td><td>staytrue1985    </td><td><a href="https://www.playstationtrophies.org/profiles/staytrue1985/log?id=14871">14871</a>    </td><td style="text-align: right;">   77.31</td></tr>
 <tr><td>13:22 </td><td>staytrue1985    </td><td><a href="https://www.playstationtrophies.org/profiles/staytrue1985/log?id=14872">14872</a>    </td><td style="text-align: right;">   79.83</td></tr>
 <tr><td>13:25 </td><td>staytrue1985    </td><td><a href="https://www.playstationtrophies.org/profiles/staytrue1985/log?id=14891">14891</a>    </td><td style="text-align: right;">   60.28</td></tr>
@@ -1107,7 +1107,7 @@
 <tr><td>13:32 </td><td>Dino_Roar       </td><td><a href="https://www.playstationtrophies.org/profiles/Dino_Roar/log?id=139462">139462</a>     </td><td style="text-align: right;">  100   </td></tr>
 <tr><td>13:33 </td><td>Dino_Roar       </td><td><a href="https://www.playstationtrophies.org/profiles/Dino_Roar/log?id=139464">139464</a>     </td><td style="text-align: right;">  100   </td></tr>
 <tr><td>13:34 </td><td>Dino_Roar       </td><td><a href="https://www.playstationtrophies.org/profiles/Dino_Roar/log?id=139467">139467</a>     </td><td style="text-align: right;">   97.86</td></tr>
-<tr><td>13:35 </td><td>wrestlefanatic77</td><td><a href="https://www.playstationtrophies.org/profiles/wrestlefanatic77/log?id=17554">17554</a></td><td style="text-align: right;">   46.57</td></tr>
+<tr><td>13:35 </td><td>wrestlefanatic77</td><td><a href="https://www.playstationtrophies.org/profiles/wrestlefanatic77/log?id=17554">17554</a></td><td style="text-align: right;">   46.61</td></tr>
 <tr><td>13:36 </td><td>Dino_Roar       </td><td><a href="https://www.playstationtrophies.org/profiles/Dino_Roar/log?id=139472">139472</a>     </td><td style="text-align: right;">   94.66</td></tr>
 <tr><td>13:37 </td><td>Dino_Roar       </td><td><a href="https://www.playstationtrophies.org/profiles/Dino_Roar/log?id=139475">139475</a>     </td><td style="text-align: right;">   94.31</td></tr>
 <tr><td>13:38 </td><td>Dino_Roar       </td><td><a href="https://www.playstationtrophies.org/profiles/Dino_Roar/log?id=139481">139481</a>     </td><td style="text-align: right;">   98.84</td></tr>
@@ -1491,15 +1491,15 @@
 <tr><td>Darth_Krid      </td><td style="text-align: right;">     34</td></tr>
 <tr><td>danc97-         </td><td style="text-align: right;">     33</td></tr>
 <tr><td>daco_1979       </td><td style="text-align: right;">     26</td></tr>
+<tr><td>Jerry_Appleby   </td><td style="text-align: right;">     22</td></tr>
 <tr><td>THE--ALCHEMlST  </td><td style="text-align: right;">     22</td></tr>
 <tr><td>R1p3r_5000      </td><td style="text-align: right;">     20</td></tr>
 <tr><td>Martz4040       </td><td style="text-align: right;">     19</td></tr>
-<tr><td>Jerry_Appleby   </td><td style="text-align: right;">     18</td></tr>
 <tr><td>Dolken_swe      </td><td style="text-align: right;">     18</td></tr>
 <tr><td>Da-Eastside     </td><td style="text-align: right;">     17</td></tr>
 <tr><td>Barra333        </td><td style="text-align: right;">     14</td></tr>
-<tr><td>Lion_Squid      </td><td style="text-align: right;">     11</td></tr>
 <tr><td>Blood_Velvet    </td><td style="text-align: right;">     10</td></tr>
+<tr><td>Lion_Squid      </td><td style="text-align: right;">     10</td></tr>
 <tr><td>diskdocx        </td><td style="text-align: right;">      9</td></tr>
 <tr><td>slammajamma28   </td><td style="text-align: right;">      9</td></tr>
 <tr><td>Road2unner      </td><td style="text-align: right;">      8</td></tr>
@@ -2385,7 +2385,7 @@
 <tr><td>MISSING                                                                                    </td><td>MISSING </td><td style="text-align: right;">       09</td></tr>
 <tr><td>MISSING                                                                                    </td><td>MISSING </td><td style="text-align: right;">       10</td></tr>
 <tr><td>MISSING                                                                                    </td><td>MISSING </td><td style="text-align: right;">       11</td></tr>
-<tr><td>MISSING                                                                                    </td><td>MISSING </td><td style="text-align: right;">       12</td></tr>
+<tr><td><a href="https://www.playstationtrophies.org/profiles/Jerry_Appleby/log?id=32557">32557</a></td><td>75.70   </td><td style="text-align: right;">       12</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Jerry_Appleby/log?id=32539">32539</a></td><td>11.95   </td><td style="text-align: right;">       13</td></tr>
 <tr><td>MISSING                                                                                    </td><td>MISSING </td><td style="text-align: right;">       14</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Jerry_Appleby/log?id=32542">32542</a></td><td>16.91   </td><td style="text-align: right;">       15</td></tr>
@@ -2420,7 +2420,7 @@
 <tr><td>MISSING                                                                                    </td><td>MISSING </td><td style="text-align: right;">       44</td></tr>
 <tr><td>MISSING                                                                                    </td><td>MISSING </td><td style="text-align: right;">       45</td></tr>
 <tr><td>MISSING                                                                                    </td><td>MISSING </td><td style="text-align: right;">       46</td></tr>
-<tr><td>MISSING                                                                                    </td><td>MISSING </td><td style="text-align: right;">       47</td></tr>
+<tr><td><a href="https://www.playstationtrophies.org/profiles/Jerry_Appleby/log?id=32556">32556</a></td><td>47.59   </td><td style="text-align: right;">       47</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Jerry_Appleby/log?id=32546">32546</a></td><td>28.26   </td><td style="text-align: right;">       48</td></tr>
 <tr><td>MISSING                                                                                    </td><td>MISSING </td><td style="text-align: right;">       49</td></tr>
 <tr><td>MISSING                                                                                    </td><td>MISSING </td><td style="text-align: right;">       50</td></tr>
@@ -3462,7 +3462,7 @@
 </thead>
 <tbody>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/wrestlefanatic77/log?id=17565">17565</a></td><td>83.78   </td><td style="text-align: right;">       00</td></tr>
-<tr><td><a href="https://www.playstationtrophies.org/profiles/wrestlefanatic77/log?id=17553">17553</a></td><td>93.14   </td><td style="text-align: right;">       01</td></tr>
+<tr><td><a href="https://www.playstationtrophies.org/profiles/wrestlefanatic77/log?id=17553">17553</a></td><td>93.17   </td><td style="text-align: right;">       01</td></tr>
 <tr><td>MISSING                                                                                       </td><td>MISSING </td><td style="text-align: right;">       02</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/wrestlefanatic77/log?id=17635">17635</a></td><td>74.36   </td><td style="text-align: right;">       03</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/wrestlefanatic77/log?id=17656">17656</a></td><td>66.67   </td><td style="text-align: right;">       04</td></tr>
@@ -3477,7 +3477,7 @@
 <tr><td><a href="https://www.playstationtrophies.org/profiles/wrestlefanatic77/log?id=17573">17573</a></td><td>97.64   </td><td style="text-align: right;">       13</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/wrestlefanatic77/log?id=17566">17566</a></td><td>92.64   </td><td style="text-align: right;">       14</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/wrestlefanatic77/log?id=17653">17653</a></td><td>69.23   </td><td style="text-align: right;">       15</td></tr>
-<tr><td><a href="https://www.playstationtrophies.org/profiles/wrestlefanatic77/log?id=17554">17554</a></td><td>46.57   </td><td style="text-align: right;">       16</td></tr>
+<tr><td><a href="https://www.playstationtrophies.org/profiles/wrestlefanatic77/log?id=17554">17554</a></td><td>46.61   </td><td style="text-align: right;">       16</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/wrestlefanatic77/log?id=17645">17645</a></td><td>96.55   </td><td style="text-align: right;">       17</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/wrestlefanatic77/log?id=17651">17651</a></td><td>69.23   </td><td style="text-align: right;">       18</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/wrestlefanatic77/log?id=17561">17561</a></td><td>97.86   </td><td style="text-align: right;">       19</td></tr>
